2004/02/08 00:05 (-0500) rwmcfa1

	* GParamSpec.xs, t/b.t: added GParamSpec->scalar, and tested it.

2004/02/08 20:46 (-0500) muppetman

	* Glib.pm, README, NEWS: unstable release 1.034

	* GenPod.pm: add bool and CV to %basic_types.

2004/02/07 02:22 (-0500) muppetman

	* GType.xs: add the ability to add GInterfaces to new GObject types
	with register_object.  new key interfaces => \@list, where @list is a
	list of package names.  effectively does foreach (@list) {
	$_->_ADD_INTERFACE ($newtype); }, where the _ADD_INTERFACE method is 
	supposed to do the actual work of adding and initializing the interface
	implementation.

2004/02/05 21:10 (-0500) muppetman

	* GType.xs: rework _INSTALL_OVERRIDES handling one more time.  rather
	than have a mess of inherited methods which chain up,
	Glib::Type::register_object looks for _INSTALL_OVERRIDES in all
	classes of the new type's ancestry, calling it if found.  this allows
	proper overriding behavior and lets us add vfunc implementations
	without requiring changes to all client code.

	Glib::Type::register_object now *always* instantiates the class upon
	registration, to avoid problems with it maybe or maybe not existing
	later.  we also leak the reference to avoid the class needing to be
	recreated, since we can't properly recreate it later, and perl
	doesn't let classed die in normal circumstances, anyway.

	* Glib.pm: add G_PARAM_READWRITE to the list of exportable constants.

	* Glib.xs: better message?

2004/02/05 13:38 (-0500) rwmcfa1

	* GObject.xs: fixed apidoc on ... param of Glib::Object->new

2004/02/04 23:44 (-0500) muppetman

	* GObject.xs, GValue.xs: perl's IV is supposed to be as big as a
	pointer, so we can't use glib's GINT_TO_POINTER family of casts,
	because they'll truncate the IV on a 64-bit platform.  use the
	INT2PTR family of macros from the Perl api.  this is important for
	G_TYPE_POINTER GValues and g_object_[sg]et_data, for which we use
	IVs to represent the pointer values.
